--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script defer="defer" src="/main.c3adf487.js"></script>
     <link href="/main.99bf5717.css" rel="stylesheet">
 </head>
-
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 <body>
     
 </body>
